updated jupyter notebooks, dealt with document dependencies

--- a/example/Demo_FS_Document_Dependencies.ipynb
+++ b/example/Demo_FS_Document_Dependencies.ipynb
@@ -39,21 +39,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = Document('noom', experiment_id='', file_id='', parent_id='')"
+    "gas = Document({ 'PV': 'nRT' })\n",
+    "db.add(gas)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "force = Document({ 'F' : 'ma'})\n",
+    "force.add_dependency({'gas': gas.id })\n",
+    "db.add(force)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = Document({'hello': 'world'})\n",
+    "doc.add_dependency({ 'force': force.id })\n",
+    "db.add(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'74b1bee2120f45b2a315503fb7eb41da'"
+       "'b27b48c1ad2b4518bd743f5b6cff07b4'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,88 +87,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dependencies = [Document('naem', experiment_id='', file_id='', parent_id='') for _ in range(5)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dependency in dependencies:\n",
-    "    db.add(dependency)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'experiment_id': '',\n",
+       "  'version_depth': 0,\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': ''},\n",
+       " '_dependencies': {'force': '33ff9b8a39624b1d9ca39331942ef4a1'},\n",
+       " 'hello': 'world'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dependency_ids = [dependency.id for dependency in dependencies]\n",
-    "doc.dependencies = dependency_ids"
+    "doc.data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c153758f405b4fbf81682c1ff62e9434',\n",
-       " 'c921c33521f846e5829626b011bd8860',\n",
-       " 'a44b1a327a714b18a8a58e411a5ce601',\n",
-       " 'd76eaa42a6624b56b21515c197d86ce0',\n",
-       " 'd6d1c06c837242539660b5fbd8e80eca']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "doc.dependencies"
+    "result = db.find_by_id(doc.id)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'experiment_id': '',\n",
+       "  'version_depth': 0,\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': ''},\n",
+       " '_dependencies': {'force': '33ff9b8a39624b1d9ca39331942ef4a1'},\n",
+       " 'hello': 'world'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.add(doc)"
+    "result.data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['d76eaa42a6624b56b21515c197d86ce0',\n",
-       " 'c921c33521f846e5829626b011bd8860',\n",
-       " 'c153758f405b4fbf81682c1ff62e9434',\n",
-       " 'a44b1a327a714b18a8a58e411a5ce601',\n",
-       " 'd6d1c06c837242539660b5fbd8e80eca']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db._collections['document_lookup'].find_dependencies(doc.id)"
+    "db.get_dependencies(result)"
    ]
   },
   {
@@ -156,7 +161,12 @@
     {
      "data": {
       "text/plain": [
-       "['74b1bee2120f45b2a315503fb7eb41da']"
+       "{'_metadata': {'experiment_id': '',\n",
+       "  'version_depth': 0,\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': ''},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x10f01a790>},\n",
+       " 'hello': 'world'}"
       ]
      },
      "execution_count": 12,
@@ -165,57 +175,116 @@
     }
    ],
    "source": [
-    "db._collections['document_lookup'].find_dependents(doc.dependencies[0])"
+    "result.data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'experiment_id': '',\n",
+       "  'version_depth': 0,\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': ''},\n",
+       " '_dependencies': {'gas': 'eaf10f89f05b409498a11f44a1eaf2e7'},\n",
+       " 'F': 'ma'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = db.find_by_id(Document, doc.id)"
+    "result.data['_dependencies']['force'].data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['d76eaa42a6624b56b21515c197d86ce0',\n",
-       " 'c921c33521f846e5829626b011bd8860',\n",
-       " 'c153758f405b4fbf81682c1ff62e9434',\n",
-       " 'a44b1a327a714b18a8a58e411a5ce601',\n",
-       " 'd6d1c06c837242539660b5fbd8e80eca']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result.dependencies"
+    "db.get_dependencies(result.data['_dependencies']['force'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'experiment_id': '',\n",
+       "  'version_depth': 0,\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': ''},\n",
+       " '_dependencies': {},\n",
+       " 'PV': 'nRT'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.drop_collection(Document)"
+    "result.data['_dependencies']['force'].data['_dependencies']['gas'].data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x11fa09790>,\n",
+       " <ndi.document.Document at 0x11fa09d60>,\n",
+       " <ndi.document.Document at 0x11fa09a30>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db.delete_by_id(force.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}, '_dependencies': {}, 'PV': 'nRT'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in db.find():\n",
+    "    print(result.data)"
+   ]
   }
  ],
  "metadata": {
