--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -21,8 +21,7 @@
    "outputs": [],
    "source": [
     "from ndi import Document\n",
-    "from ndi.database import FileSystem as Database, Query as Q\n",
-    "from test_app.subject_doc import Subject"
+    "from ndi.database import FileSystem as Database, Query as Q"
    ]
   },
   {
@@ -31,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('../test_exp', document_extensions=[Subject])"
+    "db = Database('../test_exp')"
    ]
   },
   {
@@ -40,65 +39,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject = Subject('reference','species', 'strain', 'variant')"
+    "doc = Document({ 'subject': 'mouse' })"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = Document('subject', subject, experiment_id='', file_id='', parent_id='')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8fca63a2d094492097a7083af7dfe428\n",
-      "0\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "base_doc_id = doc.id\n",
-    "print(doc.id)\n",
-    "print(doc.version_depth)\n",
-    "print(doc.parent_id)\n",
-    "print(doc.asc_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<test_app.subject_doc.Subject at 0x1075185e0>"
+       "{'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "doc.document_extension"
+    "doc.data['_metadata']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,158 +73,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}, '_dependencies': {}, 'subject': 'mouse'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = db.find_by_id(doc.id)\n",
+    "print(result.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.data['subject'] = 'elephant'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc.document_extension.reference = 'something new'"
+    "db.update(doc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.update(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4d41942aded44f4f956ad0b55cb30cce\n",
-      "1\n",
-      "8fca63a2d094492097a7083af7dfe428\n",
-      ",8fca63a2d094492097a7083af7dfe428\n"
+      "{'_metadata': {'experiment_id': '', 'version_depth': 1, 'parent_id': '0879bd962b8d4b47921bac8800f3997c', 'asc_path': ',0879bd962b8d4b47921bac8800f3997c'}, '_dependencies': {}, 'subject': 'elephant'}\n"
      ]
     }
    ],
    "source": [
-    "print(doc.id)\n",
-    "print(doc.version_depth)\n",
-    "print(doc.parent_id)\n",
-    "print(doc.asc_path)"
+    "result = db.find_by_id(doc.id)\n",
+    "print(result.data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<test_app.subject_doc.Subject at 0x105fc0e50>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db.find(Subject, Q('reference') == 'something new')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc.document_extension.variant = 'bleh bleh'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.update(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2f125b07f6d746e7838dd574b7f14815\n",
-      "2\n",
-      "4d41942aded44f4f956ad0b55cb30cce\n",
-      ",4d41942aded44f4f956ad0b55cb30cce,8fca63a2d094492097a7083af7dfe428\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(doc.id)\n",
-    "print(doc.version_depth)\n",
-    "print(doc.parent_id)\n",
-    "print(doc.asc_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = db.find(Document, Q('asc_path').contains(base_doc_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<test_app.subject_doc.Subject object at 0x10752d040>\n",
-      "asc_path: ,8fca63a2d094492097a7083af7dfe428\n",
-      "parent_id: 8fca63a2d094492097a7083af7dfe428\n",
-      "document_id: 4d41942aded44f4f956ad0b55cb30cce\n",
-      "reference: something new\n",
-      "variant: variant\n",
-      "\n",
-      "<test_app.subject_doc.Subject object at 0x10752d340>\n",
-      "asc_path: ,4d41942aded44f4f956ad0b55cb30cce,8fca63a2d094492097a7083af7dfe428\n",
-      "parent_id: 4d41942aded44f4f956ad0b55cb30cce\n",
-      "document_id: 2f125b07f6d746e7838dd574b7f14815\n",
-      "reference: something new\n",
-      "variant: bleh bleh\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for result in results:\n",
-    "    print(doc_ext := result.document_extension)\n",
-    "    print(f'asc_path: {result.asc_path}')\n",
-    "    print(f'parent_id: {result.parent_id}')\n",
-    "    print(f'document_id: {doc_ext.document_id}')\n",
-    "    print(f'reference: {doc_ext.reference}')\n",
-    "    print(f'variant: {doc_ext.variant}')\n",
-    "    print('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
