sql ctx examples

--- a/example/Demo_Database_SQL_ctx.ipynb
+++ b/example/Demo_Database_SQL_ctx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel\n",
+    "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel, Probe, Epoch\n",
     "from ndi.daqreaders import MockReader\n",
     "from sqlalchemy import and_, or_\n",
     "from ndi.database.query import Query as Q, AndQuery, OrQuery\n",
-    "from ndi.database.sql import Datatype"
+    "from ndi.database.sql import Datatype\n",
+    "from ndi.database.utils import print_everything_in, destroy_everything_in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,20 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ndi.database.sql.SQL object at 0x106513310>\n"
+     ]
+    }
+   ],
    "source": [
-    "for table, value in db.get_tables().items():\n",
-    "    print(table)\n",
-    "    print(table if isinstance(table, str) else table.__name__)\n",
-    "    print(value)\n",
-    "    print(value.__name__)"
+    "e = Experiment(name='myExperiment3')\n",
+    "db.add(e)\n",
+    "print(e.ctx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,137 +69,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
-    "              daq_reader=MockReader)\n",
-    "ds2 = DaqSystem(name='myDaq2',\n",
-    "               file_navigator=fn,\n",
-    "               daq_reader=MockReader)"
+    "              daq_reader=MockReader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = Experiment(name='myExperiment3', \n",
-    "               daq_systems=[ds, ds2])"
+    "ds.provision(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7046392737ce4994be0953d83e098c13\n",
+      "7046392737ce4994be0953d83e098c13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e.id)\n",
+    "print(ds.experiment_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64174bbdfd634c209fd48d406151d460\n",
+      "64174bbdfd634c209fd48d406151d460\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e.daq_systems[0].id)\n",
+    "print(ds.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6d72d41996984ce18a96b3713e213253'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Probe(\n",
+    "    name = 'p0',\n",
+    "    reference = 0,\n",
+    "    type_ = 'ntrode',\n",
+    "    daq_system_id = ds.id\n",
+    ")\n",
+    "p.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.add(e)"
+    "e.add_probe(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ndi.database.sql.SQL object at 0x106513310>\n",
+      "7046392737ce4994be0953d83e098c13\n"
+     ]
+    }
+   ],
    "source": [
-    "e.ctx"
+    "print(p.ctx)\n",
+    "print(p.experiment_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fbbd7048d16646218a55284561a8c0bc', 'd5e439725b614a1da9d2e65850de1f70')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(db.find_by_id(Experiment, e.id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ndi_query = (\n",
-    "    Q('id') == e.id)\\\n",
-    "    & ( (Q('name') != 'something ridiculous')\\\n",
-    "      | (Q('name').in_(['myExperiment3', '3', 'other']))\\\n",
-    "      | (Q('name').contains('Experiment33')) )\n",
+    "epochs = [\n",
+    "    Epoch(daq_system_id = ds.id),\n",
+    "    Epoch(daq_system_id = ds.id),\n",
+    "]\n",
     "\n",
-    "for obj in db.find(Experiment, query=ndi_query):\n",
-    "    print(obj.__dict__)"
+    "epochs[0].id, epochs[1].id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "field = db._collections[Experiment].fields\n",
-    "filters = and_(\n",
-    "    field['id'] == e.id, \n",
-    "    or_(\n",
-    "        field['name'] == 'notMine', \n",
-    "        field['name'] == 'nope too', \n",
-    "        field['name'] == 'myExperiment3'))\n",
-    "\n",
-    "for obj in db._collections[Experiment].find(sqla_query=filters, result_format=Datatype.SQL_ALCHEMY):\n",
-    "    print(obj)\n",
-    "    print('-----')\n",
-    "    new_e = Experiment.from_flatbuffer(obj['flatbuffer'])\n",
-    "    print(new_e.__dict__)"
+    "e.add_epochs(epochs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e.name = 'new_name'\n",
-    "db.update(e)\n",
-    "\n",
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
+    "channels = [\n",
+    "    Channel(\n",
+    "        name = 'c0',\n",
+    "        number = 0,\n",
+    "        type_ = 'time',\n",
+    "        source_file = 'f',\n",
+    "        probe_id = p.id,\n",
+    "        epoch_id = epochs[0].id,\n",
+    "        daq_system_id = ds.id,\n",
+    "    ),\n",
+    "    Channel(\n",
+    "        name = 'c1',\n",
+    "        number = 0,\n",
+    "        type_ = 'time',\n",
+    "        source_file = 'f',\n",
+    "        probe_id = p.id,\n",
+    "        epoch_id = epochs[1].id,\n",
+    "        daq_system_id = ds.id,\n",
+    "    ),\n",
+    "    Channel(\n",
+    "        name = 'c2',\n",
+    "        number = 0,\n",
+    "        type_ = 'time',\n",
+    "        source_file = 'f',\n",
+    "        probe_id = p.id,\n",
+    "        epoch_id = epochs[1].id,\n",
+    "        daq_system_id = ds.id,\n",
+    "    ),\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete(e)\n",
-    "\n",
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
+    "e.add_channels(channels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments\n",
+      "  - myExperiment3\n",
+      "\n",
+      "DaqSystems\n",
+      "  - myDaq1\n",
+      "\n",
+      "Probes\n",
+      "  - p0\n",
+      "\n",
+      "Epochs\n",
+      "  - fbbd7048d16646218a55284561a8c0bc\n",
+      "  - d5e439725b614a1da9d2e65850de1f70\n",
+      "\n",
+      "Channels\n",
+      "  - c0\n",
+      "  - c1\n",
+      "  - c2\n",
+      "\n",
+      "Documents\n",
+      "  ---NONE---\n",
+      "\n",
+      "Lookup Table: document_to_document\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_everything_in(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with db._sqla_open_session() as session:\n",
-    "    print(type(session))"
+    "e.update(name='updateName007')\n",
+    "channels[1].delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments\n",
+      "  - updateName007\n",
+      "\n",
+      "DaqSystems\n",
+      "  - myDaq1\n",
+      "\n",
+      "Probes\n",
+      "  - p0\n",
+      "\n",
+      "Epochs\n",
+      "  - fbbd7048d16646218a55284561a8c0bc\n",
+      "  - d5e439725b614a1da9d2e65850de1f70\n",
+      "\n",
+      "Channels\n",
+      "  - c0\n",
+      "  - c2\n",
+      "\n",
+      "Documents\n",
+      "  ---NONE---\n",
+      "\n",
+      "Lookup Table: document_to_document\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_everything_in(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "destroy_everything_in(db)"
    ]
   },
   {
