remove ndi-class based collection configs from database.SQL

--- a/example/Demo_FS_Document_Dependencies.ipynb
+++ b/example/Demo_FS_Document_Dependencies.ipynb
@@ -15,10 +15,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from ndi import Document\n",
     "from ndi.database import FileSystem as Database"
@@ -26,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,52 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'b27b48c1ad2b4518bd743f5b6cff07b4'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "doc.id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'force': '33ff9b8a39624b1d9ca39331942ef4a1'},\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,32 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'force': '33ff9b8a39624b1d9ca39331942ef4a1'},\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,57 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x10f01a790>},\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'gas': 'eaf10f89f05b409498a11f44a1eaf2e7'},\n",
-       " 'F': 'ma'}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.data['_dependencies']['force'].data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,54 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {},\n",
-       " 'PV': 'nRT'}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.data['_dependencies']['force'].data['_dependencies']['gas'].data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.document.Document at 0x11fa09790>,\n",
-       " <ndi.document.Document at 0x11fa09d60>,\n",
-       " <ndi.document.Document at 0x11fa09a30>]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,17 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}, '_dependencies': {}, 'PV': 'nRT'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for result in db.find():\n",
     "    print(result.data)"
@@ -289,9 +182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.1 64-bit ('ndi-python': pipenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38164bitndipythonpipenv4045f61a47ce474ea187ae4dc6eb0d41"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
