--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -128,9 +128,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.1 64-bit ('ndi-python': pipenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38164bitndipythonpipenv4045f61a47ce474ea187ae4dc6eb0d41"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
